<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.CrearActivity">

    <EditText
        android:id="@+id/edtMarca"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/marca"
        android:inputType="text"/>
    <EditText
        android:id="@+id/edtModelo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/modelo"
        android:inputType="text"/>
    <EditText
        android:id="@+id/edtDescripcion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/descripcion"
        android:inputType="text"/>
    <EditText
        android:id="@+id/edtPrecio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/precio"
        android:inputType="text"/>

    <EditText
        android:id="@+id/edtImagen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/imagen"
        android:inputType="text"/>

    <Button
        android:id="@+id/btnAlmacenar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/guardar" />


</LinearLayout>